--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ django-rest-swagger==2.2.0
 django-select2==7.2.3
 django-user-agents==0.4.0
 djangorestframework==3.11.0
+gunicorn==20.0.4
 hiredis==1.1.0
 html5lib==1.0.1
 hyperlink==20.0.1
