--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ coreschema==0.0.4
 cryptography==2.9
 daphne==3.0.1
 defusedxml==0.6.0
+dj-database-url==0.5.0
 Django==3.1.3
 django-appconf==1.0.4
 django-bootstrap-dynamic-formsets==0.5.0
@@ -22,6 +23,7 @@ django-bootstrap-pagination==1.7.1
 django-bootstrap3==12.0.3
 django-cors-headers==3.5.0
 django-crontab==0.7.1
+django-heroku==0.3.1
 django-localflavor==3.0.1
 django-model-utils==4.1.1
 django-nocaptcha-recaptcha==0.0.20
@@ -73,4 +75,5 @@ uritemplate==3.0.1
 urllib3==1.25.8
 user-agents==2.2.0
 webencodings==0.5.1
+whitenoise==5.2.0
 zope.interface==5.2.0
